js/js.translator/testData/incremental/invalidation/mainFunction/main/m.0.kt
var ok = "Fail"
fun main() {
   ok = "OK"
}
fun box(stepId: Int): String {
    return when (stepId) {
        0 -> ok
        else -> "Unknown"
    }
}
